--- a/nuget/OpenLibrary.nuspec
+++ b/nuget/OpenLibrary.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>OpenLibrary</id>
-        <version>1.7.4</version>
+        <version>1.8.0</version>
         <title>OpenLibrary</title>
         <authors>Fakhrulhilal Maktum</authors>
         <owners>Fakhrulhilal Maktum</owners>
@@ -10,7 +10,10 @@
         <projectUrl>https://github.com/fakhrulhilal/OpenLibrary</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Various utility for C# programmer.</description>
-        <releaseNotes>Version 1.7.3
+        <releaseNotes>Version 1.8.0
+- Adding option to insert connection string directly without looking in config file
+
+Version 1.7.3
 - Separate to 3 different assembly and package (OpenLibrary, OpenLibrary-Document, OpenLibrary-MVC)
 
 Version 1.7.2
