Changes: - Fix bug for ObjectExtension.GetFieldValue()

--- a/OpenLibrary.Test/App.config
+++ b/OpenLibrary.Test/App.config
@@ -5,8 +5,9 @@
 	</startup>
 	<connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=.\SQLExpress;User Id=iroel;Password=iroel;Initial Catalog=AbacusTesting"/>
+		<add name="AbacusConnection" connectionString="Data Source=;Initial Catalog=Abacus;Integrated Security=false;User Id=iroel;Password=iroel;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
-		<add key="OpenLibrary.Utility:Sql(DefaultConnectionString)" value="DefaultConnection"/>
+		<add key="OpenLibrary.Utility:Sql(DefaultConnectionString)" value="AbacusConnection"/>
 	</appSettings>
 </configuration>
