Changes: - Adding new OpenLibrary.Contrib package (PredicateBuilder and AliasModelBinder) - ConfigurationHelper now support multi environment - Adding SHA1 & MD5 in Encryption utility - Consistance use of Generator utility - Adding function to get client IP in ControllerHelper

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,10 @@ build/
 [Oo]bj/
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
-!packages/*/build/
+#!packages/*/build/
 
 # Enable dll addded by nuget
-!/packages/*/lib/*.dll
+#!/packages/*/lib/*.dll
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -152,3 +152,4 @@ $RECYCLE.BIN/
 
 # Mac crap
 .DS_Store
+/packages/LambdaSqlBuilder.0.9/lib/net40
