--- a/nuget/OpenLibrary-MVC.nuspec
+++ b/nuget/OpenLibrary-MVC.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>OpenLibrary-MVC</id>
-        <version>1.7.3.1</version>
+        <version>1.8.0</version>
         <title>OpenLibrary MVC</title>
         <authors>Fakhrulhilal Maktum</authors>
         <owners>Fakhrulhilal Maktum</owners>
@@ -10,7 +10,11 @@
         <projectUrl>https://github.com/fakhrulhilal/OpenLibrary</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Various utility for ASP.NET MVC framework (helper, filter, model binder, etc).</description>
-        <releaseNotes>Version 1.7.3
+        <releaseNotes>Version 1.8.0
+- ConfigurationHelper now support multi environment (disable cached)
+- Added function to get client IP address in ControllerHelper
+
+Version 1.7.3
 - Separate to 3 different assembly and package (OpenLibrary, OpenLibrary-Document, OpenLibrary-MVC)
 
 Version 1.7.0:
