--- a/OpenLibrary/OpenLibrary.csproj
+++ b/OpenLibrary/OpenLibrary.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Extension\ExceptionExtension.cs" />
     <Compile Include="Extension\ObjectExtension.cs" />
     <Compile Include="Extension\StringExtension.cs" />
+    <Compile Include="Extension\XmlExtension.cs" />
     <Compile Include="OpenLibraryException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\Encryption.cs" />
