Adding missing data annotation attributes

--- a/OpenLibrary/OpenLibrary.csproj
+++ b/OpenLibrary/OpenLibrary.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OpenLibrary</RootNamespace>
     <AssemblyName>OpenLibrary</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -25,7 +26,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;CSHARP45</DefineConstants>
+    <DefineConstants>TRACE;NET40</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\OpenLibrary.XML</DocumentationFile>
@@ -51,6 +52,11 @@
     <Compile Include="Extension\ObjectExtension.cs" />
     <Compile Include="Extension\StringExtension.cs" />
     <Compile Include="Extension\XmlExtension.cs" />
+    <Compile Include="Missing\ColumnAttribute.cs" />
+    <Compile Include="Missing\DatabaseGeneratedAttribute.cs" />
+    <Compile Include="Missing\MaxLengthAttribute.cs" />
+    <Compile Include="Missing\NotMappedAttribute.cs" />
+    <Compile Include="Missing\TableAttribute.cs" />
     <Compile Include="OpenLibraryException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\Encryption.cs" />
