--- a/OpenLibrary.Test/App.config
+++ b/OpenLibrary.Test/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
 	</startup>
 	<connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=.\SQLExpress;User Id=iroel;Password=iroel;Initial Catalog=AbacusTesting"/>
-		<add name="DatabaseEntities" connectionString="metadata=res://*/Database.csdl|res://*/Database.ssdl|res://*/Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.;initial catalog=Abacus;user id=iroel;password=iroel;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-		<add name="AbacusConnection" connectionString="Data Source=.;Initial Catalog=Abacus;Integrated Security=false;User Id=iroel;Password=iroel;" providerName="System.Data.SqlClient" />
+		<add name="DatabaseEntities" connectionString="metadata=res://*/Database.csdl|res://*/Database.ssdl|res://*/Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.;initial catalog=Abacus;user id=iroel;password=iroel;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+		<add name="AbacusConnection" connectionString="Data Source=.;Initial Catalog=Abacus;Integrated Security=false;User Id=iroel;Password=iroel;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<appSettings>
 		<add key="OpenLibrary.Utility:Sql(DefaultConnectionString)" value="DatabaseEntities"/>
