--- a/nuget/OpenLibrary-MVC.nuspec
+++ b/nuget/OpenLibrary-MVC.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>OpenLibrary-MVC</id>
-        <version>1.8.1</version>
+        <version>1.8.1.1</version>
         <title>OpenLibrary MVC</title>
         <authors>Fakhrulhilal Maktum</authors>
         <owners>Fakhrulhilal Maktum</owners>
@@ -47,8 +47,11 @@ Version 1.3.2:
         </dependencies>
     </metadata>
     <files>
-        <file src="..\OpenLibrary.Mvc\bin\Release\OpenLibrary.Mvc.dll" target="lib\net45\OpenLibrary.Mvc.dll" />
-        <file src="..\OpenLibrary.Mvc\bin\Release\OpenLibrary.Mvc.pdb" target="lib\net45\OpenLibrary.Mvc.pdb" />
-        <file src="..\OpenLibrary.Mvc\bin\Release\OpenLibrary.Mvc.XML" target="lib\net45\OpenLibrary.Mvc.XML" />
+        <file src="..\OpenLibrary.Mvc\bin\Release\net45\OpenLibrary.Mvc.dll" target="lib\net45\OpenLibrary.Mvc.dll" />
+        <file src="..\OpenLibrary.Mvc\bin\Release\net45\OpenLibrary.Mvc.pdb" target="lib\net45\OpenLibrary.Mvc.pdb" />
+        <file src="..\OpenLibrary.Mvc\bin\Release\net45\OpenLibrary.Mvc.XML" target="lib\net45\OpenLibrary.Mvc.XML" />
+        <file src="..\OpenLibrary.Mvc\bin\Release\net40\OpenLibrary.Mvc.dll" target="lib\net40\OpenLibrary.Mvc.dll" />
+        <file src="..\OpenLibrary.Mvc\bin\Release\net40\OpenLibrary.Mvc.pdb" target="lib\net40\OpenLibrary.Mvc.pdb" />
+        <file src="..\OpenLibrary.Mvc\bin\Release\net40\OpenLibrary.Mvc.XML" target="lib\net40\OpenLibrary.Mvc.XML" />
     </files>
 </package>
